# notetui

./: .gitignore  HANDOVER.md  README.md  pyproject.toml  run.sh  test_notes.py
notetui/: __init__.py  app.py  calendar.py  notes.py  search.py  todolist.py
